--- a/src/app/@features/admin/products/pages/products-list/products-list.page.html
+++ b/src/app/@features/admin/products/pages/products-list/products-list.page.html
@@ -9,21 +9,37 @@
         type="button"
         label="{{ 'buttons.addnew' | translate }}"
         class="p-button-raised p-button-primary"
-        (click)="new()"
+        (click)="create()"
       ></button>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12">
-      <p-table [value]="products" class="" [rows]="5"  [paginator]="true" [loading]="loading">
+      <p-table
+        [value]="products"
+        class=""
+        [rows]="5"
+        [paginator]="true"
+        [loading]="loading"
+      >
         <ng-template pTemplate="header" let-columns>
           <tr>
             <th *ngFor="let col of displayedColumns">{{ col | translate }}</th>
+            <th></th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-product>
-          <tr>
+          <tr (click)="edit(product.id)" class="table-row">
             <td *ngFor="let col of displayedColumns">{{ product[col] }}</td>
+            <td>
+              <button
+                pButton
+                pRipple
+                icon="pi pi-trash"
+                class="p-button-danger"
+                (click)="delete(product.id)"
+              ></button>
+            </td>
           </tr>
         </ng-template>
       </p-table>
