--- a/src/app/@shared/components/header/header.component.html
+++ b/src/app/@shared/components/header/header.component.html
@@ -1,3 +1,4 @@
-<div *ngIf="isLoggedIn">
-  <button pButton class="btn btn-primary" (click)="logout()">logout</button>
+<div *ngIf="isLoggedIn" class="mt-3">
+  <button pButton class="btn btn-primary mx-2" (click)="logout()">{{'buttons.logout' | translate}}</button>
+  <button pButton class="btn btn-primary mx-2" (click)="changeLang()">{{'buttons.changeLanguage' | translate}}</button>
 </div>
