Add table translations

--- a/src/app/@features/admin/products/pages/products-list/products-list.page.html
+++ b/src/app/@features/admin/products/pages/products-list/products-list.page.html
@@ -24,7 +24,9 @@
       >
         <ng-template pTemplate="header" let-columns>
           <tr>
-            <th *ngFor="let col of displayedColumns">{{ col | translate }}</th>
+            <th *ngFor="let col of displayedColumns">
+              {{getColTranslation(col)}}
+            </th>
             <th></th>
           </tr>
         </ng-template>
