--- a/src/app/@core/auth/pages/login/login.page.html
+++ b/src/app/@core/auth/pages/login/login.page.html
@@ -4,7 +4,7 @@
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <h2>{{ 'titles.login' | translate }}</h2>
         <input formControlName="username" pInputText name="username" required />
-        <div class="p-invalid">
+        <div class="invalid">
           <small *ngIf="loginForm.controls['username'].invalid"
             >{{ 'validations.Pleaseprovideavalidusername' | translate }}</small
           >
@@ -15,7 +15,7 @@
           name="password"
           required
         ></p-password>
-        <div class="p-invalid">
+        <div class="invalid">
           <small *ngIf="loginForm.controls['password'].invalid"
             >{{ 'validations.Pleaseprovideavalidpassword' | translate }}</small
           >
