--- a/src/app/@core/auth/pages/login/login.page.scss
+++ b/src/app/@core/auth/pages/login/login.page.scss
@@ -13,8 +13,13 @@
   input,
   .p-password {
     width: 100%;
+    margin-bottom: 5px;
   }
   button {
     margin-top: 10px;
   }
+}
+
+.invalid {
+  color: red;
 }
