--- a/src/app/@features/user/components/product-card/product-card.component.html
+++ b/src/app/@features/user/components/product-card/product-card.component.html
@@ -1,4 +1,4 @@
-<div class="product-card">
+<div class="product-card" (click)="showProductDetails()">
   <div class="col-md-12 image">
     <img [ngSrc]="product.image" width="100" height="100" priority preconnect />
   </div>
